telegram-jun0813-secure

--- a/TMessagesProj/src/main/AndroidManifest.xml
+++ b/TMessagesProj/src/main/AndroidManifest.xml
@@ -159,6 +159,7 @@
                 android:resource="@xml/contacts" />
         </service>
 
+        <service android:name="org.telegram.android.DeleteMessageRepeat" android:enabled="true"/>
         <service android:name="org.telegram.android.NotificationsService" android:enabled="true"/>
         <service android:name="org.telegram.android.NotificationRepeat" android:exported="false"/>
         <service android:name="org.telegram.android.NotificationDelay" android:exported="false"/>
